<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/save_menu"
        android:orderInCategory="1"
        android:title="@string/save_entry_label"
        app:showAsAction="always" />
</menu>